# Registration-Verification-System

./: .dockerignore  .env.example  .gitignore  CLEANUP_SUMMARY.md  Dockerfile  QA.md  README.md  docker-compose.yml  embedding.py  gunicorn_conf.py  pyproject.toml  requirements.txt
data/synth/: annotations.csv
docs/: TESSERACT_INSTALL.md
scripts/: prefetch_models.py
src/: main.py
src/app/: __init__.py
src/app/background/: __init__.py  payment_watcher.py
src/app/config/: config.py
src/app/models/: IdentificationResult.py  __init__.py  card_classifier.py
src/app/routes/: __init__.py  chatbot.py  identification.py  jotform.py  payment.py  registration.py  reminder.py  validation.py  validation_flask.py
src/app/services/: __init__.py  chatbot_service.py  database.py  document_service.py  document_validator.py  jotform_service.py  ocr_service.py  payment_service.py  processing_pr_card.py  registration_service.py  reminder_service.py  workflow_orchestrator.py
src/app/templates/: index.html  inform_client_payment_error.html  inform_client_payment_reminder.html  inform_client_success.html  inform_staff_error.html  inform_staff_ocr_success.html  inform_staff_register_success.html  inform_staff_reminder_report.html  inform_staff_success.html
src/app/utils/: __init__.py  aws_utils.py  database_utils.py  extraction_tools.py  file_utils.py  google_utils.py  image_utils.py  imap_utils.py  ocr.py
src/data/: registration_data.csv
src/data/embedding/: document_chunks.json  document_chunks.txt  document_index.faiss
src/tests/: conftest.py  test_image_utils.py
