[project]
name = "registration-verification-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.2",
    "pandas>=2.3.3",
    "pymongo>=4.15.2",
    "python-dotenv>=1.1.1",
]
[tool.uv.scripts]
dev = "python src/main.py"
